--- a/demo1.html
+++ b/demo1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content ="3">
+        <meta http-equiv="refresh" content="3">
     </head>
     <body>
-
+        <h1>hello</h1>
     </body>
 </html>
